# tricorder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: audio.cpp  audio.h  rttl_task.cpp  rttl_task.h
main/common/: shared_data.c  shared_data.h
main/drivers/: fxas21002.c  fxas21002.h  fxos8700.c  fxos8700.h  ili9341_display.c  ili9341_display.h  lgfx_display.cpp  lgfx_display.h
main/game/: space_game.cpp  space_game.h
main/game/core/: game_state.h
main/game/entities/: player.h
main/network/: wifi_manager.cpp  wifi_manager.h
main/tasks/: imu_task.c  imu_task.h  input_task.cpp  input_task.h  ui_task.c  ui_task.cpp  ui_task.h
main/ui/: page_menu.cpp  page_menu.h  ui_helpers.cpp  ui_helpers.h  ui_menu.cpp  ui_menu.h  ui_mode.cpp  ui_mode.h  ui_pages.cpp  ui_pages.h  ui_renderer.cpp  ui_renderer.h
main/ui/pages/: page_ahrs.cpp  page_ahrs.h
