idf_component_register(
    SRCS
        "main.c"
        "drivers/fxos8700.c"
        "drivers/fxas21002.c"
        "drivers/ili9341_display.c"
        "drivers/lgfx_display.cpp"
        "common/shared_data.c"
        "tasks/imu_task.c"
        "tasks/ui_task.cpp"
        "tasks/input_task.cpp"
        "ui/ui_helpers.cpp"
        "ui/ui_renderer.cpp"
        "ui/ui_pages.cpp"
        "ui/ui_menu.cpp"
        "ui/page_menu.cpp"
        "ui/ui_mode.cpp"
        "network/wifi_manager.cpp"
        "game/space_game.cpp"
        "audio/audio.cpp"
        "audio/rttl_task.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_driver_i2c
        esp_lcd
        esp_driver_spi
        esp_lcd_ili9341
        esp_wifi
        LovyanGFX
)
